--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,16 +5,21 @@
     <item
         android:id="@+id/action_widgets"
         android:orderInCategory="100"
-        android:title="Widgets"
+        android:title="@string/widgets"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_list_items"
         android:orderInCategory="100"
-        android:title="List Items"
+        android:title="@string/list_items"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_recycler_items"
         android:orderInCategory="100"
-        android:title="Recycler Items"
+        android:title="@string/recycler_items"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_dialog"
+        android:orderInCategory="100"
+        android:title="@string/dialogs"
         app:showAsAction="never" />
 </menu>
