--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="padding_16_dp">16dp</dimen>
+    <dimen name="text_size">20sp</dimen>
+    <dimen name="button_padding">10dp</dimen>
 </resources>
