--- a/app/src/main/res/layout/layout_recycler_android_versions.xml
+++ b/app/src/main/res/layout/layout_recycler_android_versions.xml
@@ -40,7 +40,7 @@
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:padding="16dp"
+            android:padding="18dp"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
@@ -86,13 +86,15 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:maxLines="3"
+                android:ellipsize="end"
                 android:text="specification"
                 android:textSize="16sp"
 
 
                 android:id="@+id/desc"/>
         </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
