--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="padding_16_dp">16dp</dimen>
     <dimen name="text_size">20sp</dimen>
     <dimen name="button_padding">10dp</dimen>
+    <dimen name="d10">10dp</dimen>
 </resources>
