--- a/app/src/main/res/layout/activity_tabs_with_view_pager2_actvitiy.xml
+++ b/app/src/main/res/layout/activity_tabs_with_view_pager2_actvitiy.xml
@@ -24,7 +24,11 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
+    <androidx.viewpager2.widget.ViewPager2
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
+        android:id="@+id/viewPager2"/>
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
