--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="d10">10dp</dimen>
     <dimen name="cardCornerRadius">15dp</dimen>
     <dimen name="cardElevation">10dp</dimen>
+    <dimen name="ivHeight">250dp</dimen>
     <dimen name="login_text">22sp</dimen>
     <dimen name="edit_text">10sp</dimen>
     <dimen name="padding_card">22dp</dimen>
@@ -14,4 +15,5 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="_80sdp">80dp</dimen>
 </resources>
