--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="_80sdp">80dp</dimen>
+    <dimen name="card_height">140dp</dimen>
+    <dimen name="text_size_20">20sp</dimen>
 </resources>
